Bypass Spring Security completely for health check endpoints